--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </head>
     <body>
         <nav class="main-navigation">
+            <a href="#coming-soon">Coming soon</a>
             <a href="#happy-weekend">Happy weekend</a>
             <a href="https://github.com/JurgitaE/lesson-notes" target="_blank">
                 Site-Repo
@@ -39,14 +40,14 @@
         <main>
             <div class="week">
                 <header>
-                    <h1>
+                    <h2>
                         <a
                             href="https://github.com/front-end-by-rimantas/41-grupe-happy-weekend"
                             target="_blank"
                             id="happy-weekend">
                             Happy weekend project
                         </a>
-                    </h1>
+                    </h2>
 
                     <a
                         href="https://github.com/JurgitaE/03-happy-weekend"
@@ -56,7 +57,7 @@
                 </header>
                 <!-- 2022-11-21 -->
                 <div class="day">
-                    <h2>2022-11-21 - Issues, project tables, branches</h2>
+                    <h3>2022-11-21 - Issues, project tables, branches</h3>
                     <a
                         href="https://www.youtube.com/watch?v=q3l-gsidBRw"
                         target="_blank"
@@ -111,7 +112,7 @@
                 </div>
                 <!-- 2022-11-22 -->
                 <div class="day">
-                    <h2>2022-11-22 - favicon, styling</h2>
+                    <h3>2022-11-22 - favicon, styling</h3>
                     <a
                         href="https://www.youtube.com/watch?v=KCg_lAy1gmU"
                         target="_blank"
@@ -192,7 +193,7 @@
                 </div>
                 <!-- 2022-11-23 -->
                 <div class="day">
-                    <h2>2022-11-23 - styling, selectors</h2>
+                    <h3>2022-11-23 - styling, selectors</h3>
                     <a
                         href="https://www.youtube.com/watch?v=Hr40BLgOxGw"
                         target="_blank"
@@ -270,7 +271,7 @@
                 </div>
                 <!-- 2022-11-24 -->
                 <div class="day">
-                    <h2>2022-11-24 - Font Awesome, CSS classes, custom properties</h2>
+                    <h3>2022-11-24 - Font Awesome, CSS classes, custom properties</h3>
                     <a
                         class="youtube"
                         href="https://www.youtube.com/watch?v=UYpCK1QN06w"
@@ -323,6 +324,66 @@
                     <span class="code"> var(propertName)</span> (e.g. var(--main-color)).
                 </div>
             </div>
+            <div class="week">
+                <header>
+                    <h2>
+                        <a
+                            href="https://github.com/front-end-by-rimantas/41-grupe-coming-soon"
+                            target="_blank"
+                            id="coming-soon">
+                            Coming soon
+                        </a>
+                    </h2>
+
+                    <a href="https://github.com/JurgitaE/04-coming-soon" target="_blank">
+                        Personal Repo for the project
+                    </a>
+                </header>
+                <div class="day">
+                    <h3>2022-11-28 -</h3>
+                    <a
+                        class="youtube"
+                        href="https://www.youtube.com/watch?v=UV45SnR5rK4"
+                        target="_blank"
+                        >Youtube video part 1
+                    </a>
+                    <a class="youtube" href="" target="_blank">Youtube video part 2 </a>
+                </div>
+            </div>
+
+            <!-- week template 
+            <div class="week">
+                <header>
+                    <h2>
+                        <a
+                            href="#"
+                            target="_blank"
+                            id="">
+                            PROJECT NAME
+                        </a>
+                    </h2>
+
+                    <a href="" target="_blank"> Personal Repo for the project </a>
+                </header>
+            </div>
+            -->
+            <!-- day template 
+            <div class="day">
+                <h3></h3>
+                    <a
+                        class="youtube"
+                        href="
+                        target="_blank"
+                        >Youtube video part 1
+                    </a>
+                    <a
+                        class="youtube"
+                        href="
+                        target="_blank"
+                        >Youtube video part 2
+                    </a>
+            </div>
+            -->
         </main>
     </body>
 </html>
