--- a/index.html
+++ b/index.html
@@ -340,14 +340,56 @@
                     </a>
                 </header>
                 <div class="day">
-                    <h3>2022-11-28 -</h3>
+                    <h3>
+                        2022-11-28 - snippets, responsive design, organizing CSS
+                        files/folders, resetting defaults
+                    </h3>
                     <a
                         class="youtube"
                         href="https://www.youtube.com/watch?v=UV45SnR5rK4"
                         target="_blank"
                         >Youtube video part 1
                     </a>
-                    <a class="youtube" href="" target="_blank">Youtube video part 2 </a>
+                    <a
+                        class="youtube"
+                        href="https://www.youtube.com/watch?v=w5jfkBDxvFk"
+                        target="_blank"
+                        >Youtube video part 2
+                    </a>
+                    <p>
+                        You can select creating <strong>Licence</strong> 'commit directly
+                        to the develop branch'. <br />
+                        <strong>CTA</strong> - Call To Action.
+                    </p>
+                    <p>
+                        <strong>Snippets</strong> are shortcuts to text templates. To
+                        access snippets in VS code
+                        <span class="code"
+                            >Ctrl + Shift + p -- Snippets: Configure User Snippets --
+                            select htm, css or other</span
+                        >
+                    </p>
+                    <figure>
+                        <img src="./img/favicon-snippet.png" alt="fvicon-snippet" />
+                        <figcaption>Favicon snippet example</figcaption>
+                    </figure>
+                    <p>Structuring <strong> CSS folders</strong>:</p>
+                    <ul>
+                        <li>3rd-party</li>
+                        <li>base</li>
+                        <li>components</li>
+                        <li>pages</li>
+                    </ul>
+                    <p>
+                        To reset default styling (margins, padding and etc.), use
+                        <strong>body</strong> and <strong>body *</strong> selectors
+                        (base.css).
+                    </p>
+                    <p>
+                        <span class="tech">CSS</span>:
+                        <span class="code">box-sizing: border-box;</span> - calculates
+                        width including content, padding and border.
+                    </p>
                 </div>
             </div>
 
