--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <title>Class Notes</title>
     </head>
     <body>
-        <nav class="main-navigation">
+        <nav class="main-navigation container">
             <a href="#coming-soon">Coming soon</a>
             <a href="#happy-weekend">Happy weekend</a>
             <a href="https://github.com/JurgitaE/lesson-notes" target="_blank">
@@ -37,7 +37,7 @@
                 Class Video
             </a>
         </nav>
-        <main>
+        <main class="container">
             <div class="week">
                 <header>
                     <h2>
@@ -260,7 +260,11 @@
                             - only <strong>css and fonts folders</strong> are needed.
                         </li>
                         <li>
-                            <a href="https://github.com/marketplace/imgbot"> Imgbot </a>
+                            <a
+                                href="https://github.com/marketplace/imgbot"
+                                target="_blank">
+                                Imgbot
+                            </a>
                         </li>
                     </ul>
                     <p>
@@ -391,6 +395,29 @@
                         width including content, padding and border.
                     </p>
                 </div>
+                <div class="day">
+                    <h3>2022-11-29</h3>
+                    <a
+                        class="youtube"
+                        href="https://www.youtube.com/watch?v=WOsIAzq6GEo&list=PLcLHBZr0jPABsCuLBXBpEiOZ12PWM99rr&index=17"
+                        target="_blank"
+                        >Youtube video part 1
+                    </a>
+                    <a
+                        class="youtube"
+                        href="https://www.youtube.com/watch?v=mBHTXVG0U8s&list=PLcLHBZr0jPABsCuLBXBpEiOZ12PWM99rr&index=18"
+                        target="_blank"
+                        >Youtube video part 2
+                    </a>
+                    <p>
+                        If direct changes are made to develop branch (e.g. direct pull
+                        request from Imgbot ) - pull requests should be made from develop
+                        to lower level branches to prevent differences, synchronize
+                        changes in VS code. <br />
+                        Class <strong>'container'</strong> is used for 100% width general blocks
+                        in a website.
+                    </p>
+                </div>
             </div>
 
             <!-- week template 
@@ -414,13 +441,13 @@
                 <h3></h3>
                     <a
                         class="youtube"
-                        href="
+                        href=""
                         target="_blank"
                         >Youtube video part 1
                     </a>
                     <a
                         class="youtube"
-                        href="
+                        href=""
                         target="_blank"
                         >Youtube video part 2
                     </a>
