--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                     </p>
                 </div>
                 <div class="day">
-                    <h3>2022-11-29</h3>
+                    <h3>2022-11-29 - @media, working with branches locally, Flexbox</h3>
                     <a
                         class="youtube"
                         href="https://www.youtube.com/watch?v=WOsIAzq6GEo&list=PLcLHBZr0jPABsCuLBXBpEiOZ12PWM99rr&index=17"
@@ -414,9 +414,51 @@
                         request from Imgbot ) - pull requests should be made from develop
                         to lower level branches to prevent differences, synchronize
                         changes in VS code. <br />
-                        Class <strong>'container'</strong> is used for 100% width general blocks
-                        in a website.
+                        Class <strong>'container'</strong> is used for 100% width general
+                        blocks in a website. <br />
+                        <span class="tech">CSS</span>:
+                        <span class="code">@media (min-width, max-width etc.) { }</span>
+                        is used for different breakpoint styling.
                     </p>
+                    <p>
+                        <strong>Working with branches locally</strong> <br />
+                        Branches can be deleted in VS code:
+                        <span class="code">
+                            Source Code (Ctl + Shift + G) -- ... -- Branch -- Delete
+                            Branch</span
+                        >. <br />
+                        To update information locally, in terminal: <br />
+                        <span class="code">$ git fetch -p</span> or
+                        <span class="code">$ git fetch --prune</span> dumps old files and
+                        renews info <br />
+                        <span class="code">$ git fetch origin -p</span> full version.<br />
+                    </p>
+                    <p>Useful links:</p>
+                    <ul>
+                        <li>
+                            <a
+                                target="_blank"
+                                href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/"
+                                target="_blank">
+                                A Complete Guide to Flexbox
+                            </a>
+                        </li>
+                        <li>
+                            <a target="_blank" href="https://flexboxfroggy.com/"
+                                >Froggy game
+                            </a>
+                        </li>
+                        <li>
+                            <a target="_blank" href="http://www.flexboxdefense.com/">
+                                Flexbox defense game
+                            </a>
+                        </li>
+                        <li>
+                            <a target="_blank" href="https://caniuse.com/ciu/about"
+                                >Browser support tables
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
 
