--- a/index.html
+++ b/index.html
@@ -460,6 +460,33 @@
                         </li>
                     </ul>
                 </div>
+                <div class="day">
+                    <h3>2022-11-30 - flexbox, FontAwesome, HTML entities</h3>
+                    <a
+                        class="youtube"
+                        href="https://www.youtube.com/watch?v=w-OORjm9VlE"
+                        target="_blank"
+                        >Youtube video part 1
+                    </a>
+                    <a
+                        class="youtube"
+                        href="https://www.youtube.com/watch?v=1RQdDIEBKNg"
+                        target="_blank"
+                        >Youtube video part 2
+                    </a>
+                    <p>
+                        <strong>320px</strong> will be the least width to which we will
+                        addapt in @media. <br />
+                        An <strong>HTML entity</strong> is a piece of text ("string") that
+                        begins with an ampersand (&) and ends with a semicolon (;).
+                        Frequently used to display reserved characters. <br />
+                        <a
+                            href="https://www.w3schools.com/html/html_entities.asp"
+                            target="_blank">
+                            HTML Entities
+                        </a>
+                    </p>
+                </div>
             </div>
 
             <!-- week template 
