--- a/index.html
+++ b/index.html
@@ -487,6 +487,25 @@
                         </a>
                     </p>
                 </div>
+                <div class="day">
+                    <h3>2022-12-01 - components, progress bars, pseudo elements</h3>
+                    <a
+                        class="youtube"
+                        href="https://www.youtube.com/watch?v=etQjw7LjI2U"
+                        target="_blank"
+                        >Youtube video part 1
+                    </a>
+                    <a
+                        class="youtube"
+                        href="https://www.youtube.com/watch?v=tON41x49qWE"
+                        target="_blank"
+                        >Youtube video part 2
+                    </a>
+                    <p>
+                        One CSS selector should not inlcude more than 3 classes (start and
+                        end classes is a must).
+                    </p>
+                </div>
             </div>
 
             <!-- week template 
