updates, back to top button

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             href="./favicon/favicon-16x16.png" />
         <link rel="manifest" href="./favicon/site.webmanifest" />
         <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5" />
+        <link rel="stylesheet" href="./css/font-awesome.min.css">
         <link rel="stylesheet" href="./css/style.css" />
         <title>Class Notes</title>
     </head>
@@ -506,12 +507,36 @@
                         end classes is a must).
                     </p>
                 </div>
+                <div class="day">
+                    <h3>
+                        2022-12-05 - setting margin/padding values, variables, colors(hsv,
+                        rgb, hex)
+                    </h3>
+                    <a
+                        class="youtube"
+                        href="https://www.youtube.com/watch?v=BMGtTIqokPs"
+                        target="_blank"
+                        >Youtube video part 1
+                    </a>
+                    <a
+                        class="youtube"
+                        href="https://www.youtube.com/watch?v=Y8pDQcJixAM"
+                        target="_blank"
+                        >Youtube video part 2
+                    </a>
+                </div>
+                <div class="day">
+                    <h3>2022-12-06 - scroll to top, @keyframes, transform: translate</h3>
+                    <a class="youtube" href="" target="_blank">Youtube video part 1 </a>
+                    <a class="youtube" href="" target="_blank">Youtube video part 2 </a>
+                </div>
             </div>
-
+            <a href="#" class="fa fa-angle-up back-to-top"></a>
+            
             <!-- week template 
-            <div class="week">
-                <header>
-                    <h2>
+                <div class="week">
+                    <header>
+                        <h2>
                         <a
                             href="#"
                             target="_blank"
