--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             href="./favicon/favicon-16x16.png" />
         <link rel="manifest" href="./favicon/site.webmanifest" />
         <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5" />
-        <link rel="stylesheet" href="./css/font-awesome.min.css">
+        <link rel="stylesheet" href="./css/font-awesome.min.css" />
         <link rel="stylesheet" href="./css/style.css" />
         <title>Class Notes</title>
     </head>
@@ -531,8 +531,9 @@
                     <a class="youtube" href="" target="_blank">Youtube video part 2 </a>
                 </div>
             </div>
+
             <a href="#" class="fa fa-angle-up back-to-top"></a>
-            
+
             <!-- week template 
                 <div class="week">
                     <header>
