--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
         <link rel="manifest" href="./favicon/site.webmanifest" />
         <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5" />
         <link rel="stylesheet" href="./css/font-awesome.min.css" />
+        <link rel="stylesheet" href="./css/bubble.css" />
         <link rel="stylesheet" href="./css/style.css" />
         <title>Class Notes</title>
     </head>
     <body>
+        <div class="bubble">
+            <div class="bubble smile"></div>
+        </div>
         <nav class="main-navigation container">
             <a href="#coming-soon">Coming soon</a>
             <a href="#happy-weekend">Happy weekend</a>
@@ -400,13 +404,13 @@
                     <h3>2022-11-29 - @media, working with branches locally, Flexbox</h3>
                     <a
                         class="youtube"
-                        href="https://www.youtube.com/watch?v=WOsIAzq6GEo&list=PLcLHBZr0jPABsCuLBXBpEiOZ12PWM99rr&index=17"
+                        href="https://www.youtube.com/watch?v=WOsIAzq6GEo"
                         target="_blank"
                         >Youtube video part 1
                     </a>
                     <a
                         class="youtube"
-                        href="https://www.youtube.com/watch?v=mBHTXVG0U8s&list=PLcLHBZr0jPABsCuLBXBpEiOZ12PWM99rr&index=18"
+                        href="https://www.youtube.com/watch?v=mBHTXVG0U8s"
                         target="_blank"
                         >Youtube video part 2
                     </a>
@@ -533,7 +537,7 @@
                     </h3>
                     <a
                         class="youtube"
-                        href="https://www.youtube.com/watch?v=g979KFS-rcY&list=PLcLHBZr0jPABsCuLBXBpEiOZ12PWM99rr&index=25"
+                        href="https://www.youtube.com/watch?v=g979KFS-rcY"
                         target="_blank"
                         >Youtube video part 1
                     </a>
@@ -653,6 +657,32 @@
                     <!-- 
 
  -->
+                </div>
+                <div class="day">
+                    <h3>2022-12-07 - forms, CSS grid</h3>
+                    <a
+                        class="youtube"
+                        href="https://www.youtube.com/watch?v=Dbxc8Xe1sXY"
+                        target="_blank"
+                        >Youtube video part 1
+                    </a>
+                    <a
+                        class="youtube"
+                        href="https://www.youtube.com/watch?v=n7p9_WGEM7Y"
+                        target="_blank"
+                        >Youtube video part 2
+                    </a>
+                    <p>
+                        <a
+                            href="https://css-tricks.com/snippets/css/complete-guide-grid/"
+                            target="_blank">
+                            A Complete Guide to CSS Grid
+                        </a>
+                    </p>
+                    <p>
+                        <span class="code">grid-template-columns;grid-column</span><br />
+                        <span class="code">grid-template-area;grid-area</span>
+                    </p>
                 </div>
             </div>
 
