--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <div class="bubble smile"></div>
         </div>
         <nav class="main-navigation container">
+            <a href="#js-intro">JS Intro</a>
             <a href="#coming-soon">Coming soon</a>
             <a href="#happy-weekend">Happy weekend</a>
             <a href="https://github.com/JurgitaE/lesson-notes" target="_blank">
@@ -682,6 +683,53 @@
                     <p>
                         <span class="code">grid-template-columns;grid-column</span><br />
                         <span class="code">grid-template-area;grid-area</span>
+                    </p>
+                </div>
+            </div>
+            <div class="week">
+                <header>
+                    <h2>
+                        <a
+                            href="https://github.com/front-end-by-rimantas/41-grupe-js-intro"
+                            target="_blank"
+                            id="js-intro">
+                            JS Intro
+                        </a>
+                    </h2>
+
+                    <a href="https://github.com/JurgitaE/05-js-intro" target="_blank">
+                        Personal Repo for the project
+                    </a>
+                </header>
+                <div class="day">
+                    <h3>2022-12-08 - Introduction to JavaScript: numbers and strings</h3>
+                    <a
+                        class="youtube"
+                        href="https://www.youtube.com/watch?v=Kdl0Iaq0TQo"
+                        target="_blank"
+                        >Youtube video part 1
+                    </a>
+                    <a
+                        class="youtube"
+                        href="https://www.youtube.com/watch?v=gi9IefwWars"
+                        target="_blank"
+                        >Youtube video part 2
+                    </a>
+                    <p>
+                        To start with <span class="tech">JS</span> in VS code
+                        <span class="code"> npm i - D nodemon</span>. In
+                        <strong>package.json</strong> add all js files according to the
+                        name e.g.
+                        <span class="code">"strings": "nodemon ./js/03-strings.js",</span
+                        >.
+                    </p>
+                    <p>
+                        Practice for homework:
+                        <a
+                            href="https://docs.google.com/document/d/1UnM5MzO7KPf-atlz3HXPJN8XlaN37nlUJ7fp6GwvIZ8/edit#heading=h.40g6yguvm5k8"
+                            target="_blank"
+                            >JavaScript mini užduotys</a
+                        >.
                     </p>
                 </div>
             </div>
