--- a/index.html
+++ b/index.html
@@ -415,9 +415,19 @@
                     <a class="youtube" href="https://www.youtube.com/watch?v=lc_nuOcACIo" target="_blank">Youtube video part 2 </a>
                 </div>
                 <div class="day">
-                    <h3>2022-12-14 -</h3>
+                    <h3>2022-12-14 - If Nesting, for loops</h3>
                     <a class="youtube" href="https://www.youtube.com/watch?v=5NGQkqXqdys" target="_blank">Youtube video part 1 </a>
                     <a class="youtube" href="https://www.youtube.com/watch?v=dTPfI_qFXbs" target="_blank">Youtube video part 2 </a>
+                </div>
+                <div class="day">
+                    <h3>2022-12-15 - codewars platform, example exercises</h3>
+                    <a class="youtube" href="https://www.youtube.com/watch?v=TMOpoLc2mPw" target="_blank">Youtube video part 1 </a>
+                    <a class="youtube" href="https://www.youtube.com/watch?v=zHigFJxHgUU" target="_blank">Youtube video part 2 </a>
+                </div>
+                <div class="day">
+                    <h3></h3>
+                    <a class="youtube" href="" target="_blank">Youtube video part 1 </a>
+                    <a class="youtube" href="" target="_blank">Youtube video part 2 </a>
                 </div>
             </div>
 
