--- a/index.html
+++ b/index.html
@@ -423,17 +423,17 @@
                     <h3>2022-12-15 - codewars platform, example exercises, for loop examples, validations</h3>
                     <a class="youtube" href="https://www.youtube.com/watch?v=TMOpoLc2mPw" target="_blank">Youtube video part 1 </a>
                     <a class="youtube" href="https://www.youtube.com/watch?v=zHigFJxHgUU" target="_blank">Youtube video part 2 </a>
+                    <p>
+                        <span class="code">isNaN()</span> returns true or false. <br />
+                        <span class="code">isFinite()</span> determines whether the passed value is a finite number. If the argument is NaN, positive infinity, or negative infinity, this method
+                        returns false; otherwise, it returns true.
+                    </p>
                 </div>
                 <div class="day">
                     <h3>2022-12-19</h3>
                     <a class="youtube" href="https://www.youtube.com/watch?v=uGSKx71cDGc&t=6s" target="_blank">Youtube video part 1 </a>
                     <a class="youtube" href="https://www.youtube.com/watch?v=GTS1NPsH21M&t=2s" target="_blank">Youtube video part 2 </a>
                 </div>
-                <p>
-                    <span class="code">isNaN()</span> returns true or false. <br />
-                    <span class="code">isFinite()</span> determines whether the passed value is a finite number. If the argument is NaN, positive infinity, or negative infinity, this method returns
-                    false; otherwise, it returns true.
-                </p>
             </div>
 
             <a href="#" class="fa fa-angle-up back-to-top"></a>
